Bug fixed. Runs